[package]
name = "porkbun-ddns"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
local-ip-address = "0.6.13"
mac_address = "1.1.8"
porkbun-api = "1.0.4"
reqwest = "0.13.4"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
